fix(ci): add sudo to mysql client installation
Signed-off-by: mlycore <maxwell92@126.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -92,7 +92,7 @@ jobs:
           kubectl port-forward -n default svc/test 3306:3306 &
       - name: "install mysql-cli" 
         run: |
-          apt-get install mysql-client -y
+          sudo apt-get update & sudo apt-get upgrade & sudo apt-get -f install mysql-client 
       - name: "run tests" 
         run: |
-          bash test/kubernetes/run.sh
+          sudo bash test/kubernetes/run.sh
