chore(ci): update mysql version
Signed-off-by: mlycore <maxwell92@126.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -89,10 +89,12 @@ jobs:
           kubectl apply -f databaseendpoint.yml
           kubectl apply -f app.yml 
           kubectl wait --timeout=60s --for=condition=ready --all pod
+          kubectl get deployment pisa-controller -n ${PISANIX_NAMESPACE} -o yaml  
+          kubectl get pod -n ${PISANIX_NAMESPACE}
           kubectl port-forward -n default svc/test 3306:3306 &
       - name: "prepare mysql" 
         uses: shogo82148/actions-setup-mysql@v1
         with:
-         mysql-version: '8.0'
+         mysql-version: '5.7'
       - name: "run some test" 
         run: mysql -h127.0.0.1 -P3307 -urandom_user -prandom_password -e 'SELECT version()'
