fix(ci): commented pisa build step
Signed-off-by: mlycore <maxwell92@126.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -29,48 +29,48 @@ jobs:
     runs-on: ubuntu-latest 
     steps:
       - name: "checkout codes" 
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
       - name: "setup kind"
         uses: helm/kind-action@v1.2.0
       - name: "setup helm"
         uses: azure/setup-helm@v2.1
       - name: "setup kubectl" 
         uses: azure/setup-kubectl@v2.0
-      - name: "declare github variables" 
-        id: vars
-        shell: bash
-        run: |
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-             echo "##[set-output name=tags;]$(echo ${GITHUB_REF#refs/tags/})"  
-          else
-             echo "##[set-output name=tags;]$(echo '')"
-          fi
-          if [[ $GITHUB_REF == refs/heads/* ]]; then
-             echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"  
-          else
-             echo "##[set-output name=branch;]$(echo '')"
-          fi
-      - name: "Pisa-Controller kaniko build"
-        uses: mlycore/action-kaniko@master
-        with:
-          image: pisanixio/controller
-          username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
-          registry: ${{ secrets.DOCKERHUB_CI_HOST }}
-          build_file: pisa-controller/hack/Dockerfile 
-          tag_with_latest: true
-          extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
-      - name: "Pisa-Proxy kaniko build"
-        uses: mlycore/action-kaniko@master
-        with:
-          image: pisanixio/proxy
-          username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
-          registry: ${{ secrets.DOCKERHUB_CI_HOST }}
-          build_file: pisa-proxy/hack/Dockerfile
-          tag_with_latest: true
-          extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
+      # - name: "declare github variables" 
+      #   id: vars
+      #   shell: bash
+      #   run: |
+      #     echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+      #     if [[ $GITHUB_REF == refs/tags/* ]]; then
+      #        echo "##[set-output name=tags;]$(echo ${GITHUB_REF#refs/tags/})"  
+      #     else
+      #        echo "##[set-output name=tags;]$(echo '')"
+      #     fi
+      #     if [[ $GITHUB_REF == refs/heads/* ]]; then
+      #        echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"  
+      #     else
+      #        echo "##[set-output name=branch;]$(echo '')"
+      #     fi
+      # - name: "Pisa-Controller kaniko build"
+      #   uses: mlycore/action-kaniko@master
+      #   with:
+      #     image: pisanixio/controller
+      #     username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
+      #     registry: ${{ secrets.DOCKERHUB_CI_HOST }}
+      #     build_file: pisa-controller/hack/Dockerfile 
+      #     tag_with_latest: true
+      #     extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
+      # - name: "Pisa-Proxy kaniko build"
+      #   uses: mlycore/action-kaniko@master
+      #   with:
+      #     image: pisanixio/proxy
+      #     username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
+      #     registry: ${{ secrets.DOCKERHUB_CI_HOST }}
+      #     build_file: pisa-proxy/hack/Dockerfile
+      #     tag_with_latest: true
+      #     extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
       - name: "install Pisa Controller"
         run: |
           export PISANIX_NAMESPACE="pisanix-system"
