--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -30,51 +30,51 @@ jobs:
     steps:
       - name: "checkout codes" 
         uses: actions/checkout@v3
-      # - name: "prepare mysql" 
-      #   uses: shogo82148/actions-setup-mysql@v1
-      #   with:
-      #    mysql-version: '8.0'
       - name: "setup kind"
         uses: helm/kind-action@v1.2.0
       - name: "setup helm"
         uses: azure/setup-helm@v2.1
       - name: "setup kubectl" 
         uses: azure/setup-kubectl@v2.0
-      # - name: "declare github variables" 
-      #   id: vars
-      #   shell: bash
-      #   run: |
-      #     echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-      #     if [[ $GITHUB_REF == refs/tags/* ]]; then
-      #        echo "##[set-output name=tags;]$(echo ${GITHUB_REF#refs/tags/})"  
-      #     else
-      #        echo "##[set-output name=tags;]$(echo '')"
-      #     fi
-      #     if [[ $GITHUB_REF == refs/heads/* ]]; then
-      #        echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"  
-      #     else
-      #        echo "##[set-output name=branch;]$(echo '')"
-      #     fi
-      # - name: "Pisa-Controller kaniko build"
-      #   uses: mlycore/action-kaniko@master
-      #   with:
-      #     image: pisanixio/controller
-      #     username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
-      #     registry: ${{ secrets.DOCKERHUB_CI_HOST }}
-      #     build_file: pisa-controller/hack/Dockerfile 
-      #     tag_with_latest: true
-      #     extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
-      # - name: "Pisa-Proxy kaniko build"
-      #   uses: mlycore/action-kaniko@master
-      #   with:
-      #     image: pisanixio/proxy
-      #     username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
-      #     registry: ${{ secrets.DOCKERHUB_CI_HOST }}
-      #     build_file: pisa-proxy/hack/Dockerfile
-      #     tag_with_latest: true
-      #     extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
+      - name: "declare github variables" 
+        id: vars
+        shell: bash
+        run: |
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+             echo "##[set-output name=tags;]$(echo ${GITHUB_REF#refs/tags/})"  
+             echo "##[set-output name=imagetag;]$(echo ${GITHUB_REF#refs/tags/})"  
+          else
+             echo "##[set-output name=tags;]$(echo '')"
+             echo "##[set-output name=imagetag;]$(echo '')"
+          fi
+          if [[ $GITHUB_REF == refs/heads/* ]]; then
+             echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"  
+             echo "##[set-output name=imagetag;]$(echo ${GITHUB_REF#refs/heads/})"  
+          else
+             echo "##[set-output name=branch;]$(echo '')"
+             echo "##[set-output name=imagetag;]$(echo '')"
+          fi
+      - name: "Pisa-Controller kaniko build"
+        uses: mlycore/action-kaniko@master
+        with:
+          image: pisanixio/controller
+          username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
+          registry: ${{ secrets.DOCKERHUB_CI_HOST }}
+          build_file: pisa-controller/hack/Dockerfile 
+          tag_with_latest: true
+          extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
+      - name: "Pisa-Proxy kaniko build"
+        uses: mlycore/action-kaniko@master
+        with:
+          image: pisanixio/proxy
+          username: ${{ secrets.DOCKERHUB_CI_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_CI_PASSWORD }}
+          registry: ${{ secrets.DOCKERHUB_CI_HOST }}
+          build_file: pisa-proxy/hack/Dockerfile
+          tag_with_latest: true
+          extra_args: --build-arg GIT_BRANCH=${{ steps.vars.outputs.branch }} --build-arg GIT_COMMIT=${{ steps.vars.outputs.sha_short }} --build-arg GIT_TAG=${{ steps.vars.outputs.tags }}
       - name: "install Pisa Controller"
         run: |
           export PISANIX_NAMESPACE="pisanix-system"
@@ -82,7 +82,7 @@ jobs:
           cd charts/pisa-controller 
           helm dependency build
           cd ..
-          helm install pisa-controller pisa-controller -n ${PISANIX_NAMESPACE} 
+          helm install pisa-controller pisa-controller -n ${PISANIX_NAMESPACE} --set image.tag=${{ steps.vars.outputs.imagetag}},proxyImage.tag=${{ steps.vars.outputs.imagetag}}
           kubectl get pod -n ${PISANIX_NAMESPACE}
           kubectl wait --timeout=60s --for=condition=ready --all pod -n ${PISANIX_NAMESPACE}
           cd ..
