--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -78,6 +78,7 @@ jobs:
       - name: "install Pisa Controller"
         run: |
           export PISANIX_NAMESPACE="pisanix-system"
+          kubectl create secret docker-registry ucloud --docker-server=${{ secrets.DOCKERHUB_CI_HOST }} --docker-username=${{ secrets.DOCKERHUB_CI_USERNAME }} --docker-password=${{ secrets.DOCKERHUB_CI_PASSWORD }}
           kubectl create namespace ${PISANIX_NAMESPACE}
           kubectl label namespace default pisanix.io/inject=enabled
           cd charts/pisa-controller 
@@ -87,6 +88,7 @@ jobs:
           kubectl get pod -n ${PISANIX_NAMESPACE}
           kubectl get deployment pisa-controller -n ${PISANIX_NAMESPACE} -o yaml
           kubectl wait --timeout=60s --for=condition=ready --all pod -n ${PISANIX_NAMESPACE}
+          kubectl get pod -n ${PISANIX_NAMESPACE}
           cd ..
           cd test/kubernetes
           kubectl apply -f mysql.yml 
@@ -94,6 +96,8 @@ jobs:
           kubectl apply -f trafficstrategy.yml
           kubectl apply -f databaseendpoint.yml
           kubectl apply -f app.yml 
+          pod_name = $(kubectl get pod | grep test | cut -d" " -f1")
+          kubectl patch pod ${pod_name} --type='json' -p='{"spec":{"container":[{"name": "controller", "imagePullSecrets":[{"name": "uhub"}]}]}}'
           kubectl wait --timeout=60s --for=condition=ready --all pod
           kubectl get pod --show-labels
           kubectl port-forward svc/test 3308:3306 &
