chore(ci): intro uhub secret
Signed-off-by: mlycore <maxwell92@126.com>

--- a/test/kubernetes/app.yml
+++ b/test/kubernetes/app.yml
@@ -39,6 +39,8 @@ spec:
         app: nginx
         pisanix.io/inject: enabled
     spec:
+      imagePullSecrets:
+      - name: "uhub"
       volumes:
       - name: nginx 
         configMap:
