chore(ci): patch pod with secrets
Signed-off-by: mlycore <maxwell92@126.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -100,8 +100,8 @@ jobs:
           kubectl apply -f databaseendpoint.yml
           kubectl apply -f app.yml 
           sleep 3
-          # kubectl patch deployment test --type='json' -p='{"spec": {"template": {"spec":{"imagePullSecrets":[{"name": "uhub"}]}}}}'
           # kubectl patch deployment test  -p='{"spec": {"template": {"spec": {"imagePullSecrets": [{"name": "uhub"}]}}}}'
+          kubectl patch pod $(kubectl get pod | grep test | cut -d" " -f1) -p='{"spec": {"imagePullSecrets": [{"name": "uhub"}]}}'
           kubectl get pod --show-labels
           sleep 15 
           kubectl get pod --show-labels
