--- a/test/kubernetes/app.yml
+++ b/test/kubernetes/app.yml
@@ -39,8 +39,8 @@ spec:
         app: nginx
         pisanix.io/inject: enabled
     spec:
-      imagePullSecrets:
-      - name: "uhub"
+      # imagePullSecrets:
+      # - name: "uhub"
       volumes:
       - name: nginx 
         configMap:
