--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -95,14 +95,15 @@ jobs:
           kubectl apply -f trafficstrategy.yml
           kubectl apply -f databaseendpoint.yml
           kubectl apply -f app.yml 
-          sleep 5
+          sleep 15
           kubectl patch deployment test  -p='{"spec": {"replicas": 0, "template": {"spec": {"imagePullSecrets": [{"name": "uhub"}]}}}}'
           kubectl get pod --show-labels
-          sleep 5 
+          sleep 15 
           kubectl get pod --show-labels
           kubectl scale deployment test --replicas=1 
-          sleep 5 
+          sleep 15 
           kubectl get pod --show-labels
+          kubectl get pod $(kubectl get pod | grep test | cut -d" " -f1) -o yaml
           kubectl wait --timeout=60s --for=condition=ready --all pod
           kubectl port-forward svc/test 3308:3306 &
           sleep 3
