--- a/pisa-proxy/app/metrics/Cargo.toml
+++ b/pisa-proxy/app/metrics/Cargo.toml
@@ -8,5 +8,4 @@ edition = "2021"
 
 [dependencies]
 rocket_prometheus = "0.10.0-rc.1"
-once_cell = "1.10.0"
-rocket = "0.5.0-rc.1" 
+runtime_mysql = {path = "../../runtime/mysql"}
