feat(http): introduce MetricsManager as one member of RocketServer
Signed-off-by: mlycore <maxwell92@126.com>

--- a/pisa-proxy/cmd/pisa/Cargo.toml
+++ b/pisa-proxy/cmd/pisa/Cargo.toml
@@ -28,4 +28,5 @@ server = {path = "../../app/server"}
 http = {path = "../../http"}
 proxy = {path = "../../proxy"}
 config = {path = "../../app/config"}
+pisa_metrics = {path = "../../app/metrics", package = "metrics"}
 
