--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -1,7 +1,9 @@
 # api 配置块，对应命令行参数和环境变量
 [admin]
+# api 地址
+host = "0.0.0.0"
 # api 端口
-port = "8081"
+port = 8082
 # 日志级别
 log_level = "INFO"
 
@@ -51,7 +53,7 @@ regex = "222"
 # 数据源 name
 name = "ds001"
 # database name
-db = "kubestar_test"
+db = "socksdb"
 # 数据库 user
 user = "root"
 # 数据库 password
