feat(config): add read write splitting config
Signed-off-by: wangbo <wangbo@sphere-ex.com>

--- a/pisa-proxy/Cargo.toml
+++ b/pisa-proxy/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "proxy",
     "proxy/endpoint",
     "proxy/loadbalance",
+    "proxy/strategy",
     "runtime/common",
     "runtime/mysql",
     "runtime/shardingproxy",
