update(strategy): update read write splitting config
Signed-off-by: wangbo <wangbo@sphere-ex.com>

--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -47,7 +47,7 @@ algorith_name = "random"
 name = "write-rule"
 type = "regex"
 regex = [".*"]
-target = "read_write"
+target = "readwrite"
 algorith_name = "roundrobin"
 
 [[proxy.config.plugin.concurrency_control]]
