--- a/pisa-proxy/proxy/loadbalance/Cargo.toml
+++ b/pisa-proxy/proxy/loadbalance/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0.133", default-features = false, features = ["derive"] }
+serde = { version = "1.0.133", features = ["derive"] }
 serde_derive = "1.0"
 chrono = "0.4"
 rand = "0.8"
