--- a/pisa-proxy/proxy/loadbalance/Cargo.toml
+++ b/pisa-proxy/proxy/loadbalance/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.133", features = ["derive"] }
+serde_derive = "1.0"
 chrono = "0.4"
 rand = "0.8"
 rand_distr = "0.4.3"
