feat(protocol): add  handling for character set feat(runtime): add handling for set statement
Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>

--- a/pisa-proxy/protocol/mysql/Cargo.toml
+++ b/pisa-proxy/protocol/mysql/Cargo.toml
@@ -32,5 +32,6 @@ thiserror = "1.0"
 num-traits = "0.2"
 num-derive = "0.3"
 async-trait = "0.1"
+regex = "1"
 conn_pool = { path = "../../proxy/pool" }
 protocol_codegen = { path = "../codegen" }
