fix(protocol): fix typo in mysql_const chore(Makefile): fix shell output color not turned off
Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>

--- a/pisa-proxy/Makefile
+++ b/pisa-proxy/Makefile
@@ -29,7 +29,7 @@ clean:
 
 build:
 	@mkdir -p ../bin && cargo build && /bin/cp -af target/debug/$(BINARY_NAME) ../bin/$(BINARY_NAME)
-	@echo -e "\033[33mbuild output to ./bin directory\033[0"
+	@echo -e "\033[33mbuild output to ./bin directory\033[0m"
 
 release:
 	cargo build --release
