chore(proxy): rename shardingproxy to shardingsphereproxy
Signed-off-by: mlycore <maxwell92@126.com>

--- a/pisa-proxy/Cargo.toml
+++ b/pisa-proxy/Cargo.toml
@@ -20,7 +20,7 @@ members = [
     "proxy/strategy",
     "runtime/common",
     "runtime/mysql",
-    "runtime/shardingproxy",
+    "runtime/shardingsphereproxy",
     "version"
 ]
 
