--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -16,12 +16,8 @@
 
 name: integration test
 
-on:
-  push:
-    branches:
-      - master
-      - ci 
-      - release-v*
+on: push 
+
 
 jobs:
   run:
