--- a/pisa-proxy/examples/example-config.toml
+++ b/pisa-proxy/examples/example-config.toml
@@ -23,6 +23,8 @@ db = "test"
 backend_type = "mysql"
 # proxy 与后端数据库建连连接池大小，值范围：1 ~ 255, 默认值：64
 pool_size = 3
+# 服务端版本
+server_version = "5.7.37"
 
 # 后端负载均衡配置
 [proxy.config.simple_loadbalance]
