--- a/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_virtualdatabases.yaml
@@ -75,6 +75,8 @@ spec:
                           type: integer
                         user:
                           type: string
+                        serverVersion:
+                          type: string
                       type: object
                     name:
                       type: string
