feat(helm): add new flag use to start incluster kubeclient
Signed-off-by: windghoul <windghoul@gmail.com>

--- a/charts/pisa-controller/templates/deployment.yaml
+++ b/charts/pisa-controller/templates/deployment.yaml
@@ -42,6 +42,7 @@ spec:
             - -webhookPort={{ .Values.service.webhookPort }}
             - -corePort={{ .Values.service.corePort }}
             - -proxyConfigsPort={{ .Values.service.proxyConfigsPort }}
+            - -kubeconfig=""
           env:
             - name: PISA_PROXY_IMAGE
               value: {{ printf "%s:%s" .Values.proxyImage.repository .Values.proxyImage.tag | quote}}
