Feat(stragegy): add static readwritesplitting  feature for Pisa-Proxy (#116)
* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
feat(strategy): WIP: update readwritesplitting

* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
feat(strategy): WIP: update readwritesplitting

* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
fix(strategy): fix conflicts

* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
fix(strategy): fix conflicts

* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
feat(runtime): add RouteInput as parameter for trigger in fsm
chore(strategy): add comments

* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
chore(runtime): rename lb to route_strategy

* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
fix(runtime): fix conflicts

* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
fix(strategy): fix unit test faield

* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
chore(runtime): remove unused comments

* Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>
chore(strategy): renamed undynamic to statics for readwritesplitting
config

Co-authored-by: liyao <maxwell92@126.com>

--- a/pisa-proxy/runtime/mysql/Cargo.toml
+++ b/pisa-proxy/runtime/mysql/Cargo.toml
@@ -19,6 +19,8 @@ futures = "0.3.5"
 async-trait = "0.1"
 byteorder = "0.5.3"
 thiserror = "1.0"
+rocket_prometheus = "0.10.0-rc.1"
+once_cell = "1.10.0"
 proxy = {path = "../../proxy"}
 conn_pool = { path = "../../proxy/pool" }
 mysql_protocol = {path = "../../protocol/mysql", package = "mysql_protocol"}
@@ -28,5 +30,5 @@ endpoint = {path = "../../proxy/endpoint"}
 mysql_parser = {path = "../../parser/mysql"}
 common = {path = "../common"}
 plugin = {path = "../../plugin" }
-rocket_prometheus = "0.10.0-rc.1"
-once_cell = "1.10.0"
+strategy = {path = "../../proxy/strategy"}
+
