chore(crd): update regex in TrafficStrategy to array
Signed-off-by: mlycore <maxwell92@126.com>

--- a/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
@@ -122,8 +122,10 @@ spec:
                                   description: 'the type of rule'
                                   type: string
                                 regex:
+                                  items:
+                                    type: string
+                                  type: array
                                   description: 'the regex of rule'
-                                  type: string
                                 target:
                                   description: 'the target of rule'
                                   type: string
