feat(crd): update TrafficStrategy to support ReadWriteSplitting (#121)
* feat(config): introduce read-write-splitting into TrafficStrategy

Signed-off-by: mlycore <maxwell92@126.com>

* feat(crd): update TrafficStrategy for read-write-splitting

Signed-off-by: mlycore <maxwell92@126.com>

* feat(config): update regex to array of TrafficStrategy

Signed-off-by: mlycore <maxwell92@126.com>

* chore(crd): update regex in TrafficStrategy to array

Signed-off-by: mlycore <maxwell92@126.com>

* refactor(http): using 5591 as default admin port

Signed-off-by: mlycore <maxwell92@126.com>

* refactor(config): refactor loadbalance case

Signed-off-by: mlycore <maxwell92@126.com>

--- a/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
+++ b/charts/pisa-controller/crds/core.database-mesh.io_trafficstrategies.yaml
@@ -100,8 +100,41 @@ spec:
                     required:
                     - kind
                     type: object
-                required:
-                - simpleLoadBalance
+                  readWriteSplitting:
+                    description: 'ReadWriteSplitting support read-write splitting'
+                    properties:
+                      static:
+                        description: 'Static rule based read write splitting'
+                        type: object 
+                        properties:
+                          defaultTarget:
+                            type: string
+                          rules:                           
+                            type: array
+                            items:
+                              type: object
+                              description: 'A set of rules' 
+                              properties:
+                                name:
+                                  description: 'the name of rule'
+                                  type: string
+                                type:
+                                  description: 'the type of rule'
+                                  type: string
+                                regex:
+                                  items:
+                                    type: string
+                                  type: array
+                                  description: 'the regex of rule'
+                                target:
+                                  description: 'the target of rule'
+                                  type: string
+                                algorithmName:
+                                  description: 'the algorithm of rule'
+                                  type: string
+                    required:
+                    - static 
+                    type: object
                 type: object
               selector:
                 description: A label selector is a label query over a set of resources.
