chore(workflow): reset integration test
Signed-off-by: xuanyuan300 <xuanyuan300@gmail.com>

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -85,13 +85,8 @@ jobs:
           helm install --debug pisa-controller pisa-controller -n ${PISANIX_NAMESPACE} --set image.repository=${{ secrets.DOCKERHUB_CI_HOST }}/pisanixio/controller  --set image.tag=${{ steps.vars.outputs.imagetag }} --set proxyImage.repository=${{ secrets.DOCKERHUB_CI_HOST }}/pisanixio/proxy  --set proxyImage.tag=${{ steps.vars.outputs.imagetag }} --set image.imagePullSecrets[0].name=uhub
           kubectl get pods -n ${PISANIX_NAMESPACE}
           kubectl describe pods -n ${PISANIX_NAMESPACE}
-          #kubectl wait --timeout=300s --for=condition=Ready --all pod -n ${PISANIX_NAMESPACE} || :
-          sleep 30
+          kubectl wait --timeout=60s --for=condition=Ready --all pod -n ${PISANIX_NAMESPACE}
           kubectl -l app=pisa-controller logs -n ${PISANIX_NAMESPACE}
-          for _ in `seq 1 300`;do
-            kubectl describe pods -n ${PISANIX_NAMESPACE}
-            sleep 2
-          done
           cd ..
           cd test/kubernetes
           kubectl apply -f mysql.yml 
